Student Record Data/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Axis Bank</fullName>
                </value>
                <value>
                    <fullName>SBI</fullName>
                </value>
                <value>
                    <fullName>ICICI Bank</fullName>
                </value>
                <value>
                    <fullName>Andhra Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_Joining__c</fullName>
        <label>College Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Password__c</fullName>
        <label>Aadhar Number</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Exam_Fees_Submitted__c</fullName>
        <label>Exam Fees Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Father_Mobile_Number__c</fullName>
        <label>Father Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GitHub_ID__c</fullName>
        <formula>Name &amp;&quot;.&quot;&amp; Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GitHub ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IFSC_code__c</fullName>
        <label>IFSC code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linkedin_ID__c</fullName>
        <label>Linkedin ID</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>No_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Exam Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Overall_Amount__c</fullName>
        <label>Pending Overall Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <label>Place</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sem_1st_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sem 1st Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sem_1st_Percentage__c</fullName>
        <label>Sem 1st Percentage</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sem_2nd_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sem 2nd Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sem_2nd_Percentage__c</fullName>
        <label>Sem 2nd Percentage</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sem_3rd_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sem 3rd Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sem_3rd_Percentage__c</fullName>
        <label>Sem 3rd Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sem_4th_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sem 4th Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sem_4th_Percentage__c</fullName>
        <label>Sem 4th Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_College_Url__c</fullName>
        <label>Student College Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_Hobbies__c</fullName>
        <label>Student Hobbies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cricket</fullName>
                </value>
                <value>
                    <fullName>Badminton</fullName>
                </value>
                <value>
                    <fullName>Dancing</fullName>
                </value>
                <value>
                    <fullName>Singing</fullName>
                </value>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>Art &amp; Crafts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Qualification__c</fullName>
        <label>Student Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12th</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_Sem_1st_Back__c</fullName>
        <label>Subjects  Sem 1st Back</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EEE</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_Sem_2nd_Back__c</fullName>
        <label>Subjects Sem 2nd Back</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Mathematics</fullName>
                </value>
                <value>
                    <fullName>Computer</fullName>
                </value>
                <value>
                    <fullName>Operating System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_Sem_3rd_Back__c</fullName>
        <label>Subjects Sem 3rd Back</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>DBMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subjects_Semt_4th_Back__c</fullName>
        <label>Subjects Semt 4th Back</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <label>Total Fees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Percentage__c</fullName>
        <label>Total Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Students__c</fullName>
        <label>Total Students</label>
        <type>AutoNumber</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Registrar</fullName>
        <active>true</active>
        <label>Registrar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>